--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav h2 {
     visibility: hidden;
     height: 1px;
 }
-ul {
+ nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -89,7 +89,7 @@ input {
     display: none;
 }
 input:checked ~ ul {
-    max-height: 50px;
+    max-height: 500px;
 }
 input:checked ~ label span {
     background: transparent;
