--- a/style.css
+++ b/style.css
@@ -40,9 +40,12 @@ nav h2 {
     max-height: 0;
     transition: max-height .2s ease-out;
 }
-li a {
-    display: block;
-    padding: 20px 20px;
+nav ul li {
+    display:inline-block;
+   list-style: none;
+    margin: 10px 20px;
+}
+nav ul li a{
     text-decoration: none;
     color: #ffffff;
 }
