--- a/style.css
+++ b/style.css
@@ -14,12 +14,8 @@ header {
 }
 nav {
     width: 375px;
-    background-color: #ffffff;
-    position: relative;
-    padding: 10px 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    background-color: #030A8C;
+    position: absolute;
     top: 0;
     z-index:1;
     text-transform: uppercase;
@@ -31,7 +27,7 @@ nav h2 {
     visibility: hidden;
     height: 1px;
 }
- ul {
+ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -40,12 +36,9 @@ nav h2 {
     max-height: 0;
     transition: max-height .2s ease-out;
 }
-nav ul li {
-    display:inline-block;
-   list-style: none;
-    margin: 10px 20px;
-}
-nav ul li a{
+li a {
+    display: block;
+    padding: 20px 20px;
     text-decoration: none;
     color: #ffffff;
 }
