--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ input:checked ~ ul {
     max-height: 500px;
 }
 input:checked ~ label span {
-    background: transparent;
+    background: green;
 }
 input:checked ~ label span:before {
     transform: rotate(-45deg);
