--- a/style.css
+++ b/style.css
@@ -103,3 +103,6 @@ input:checked ~ label span:after {
 input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
     top: 0;
 }
+.home{
+    align-content: flex-start;
+}
