--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ li a {
     display: block;
     padding: 20px 20px;
     text-decoration: none;
-    color: #ffffff;
+    color:green;
 }
 [href="#home"] {
     text-transform: capitalize;
