--- a/style.css
+++ b/style.css
@@ -59,7 +59,17 @@ li a {
     font-size: 30px;
     position: absolute;
     top: 0;
-    left: 90px;
+    left: 50%;
+    padding: 16px 16px;
+}
+[href="#avatar"] {
+    text-transform: capitalize;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: 30px;
+    position: absolute;
+    top: 0;
+    right: 0px;
     padding: 16px 16px;
 }
 a:hover {
