--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ li a {
     font-size: 30px;
     position: absolute;
     top: 0;
-    left: 50%;
+    align-items: center;
     padding: 16px 16px;
 }
 [href="#avatar"] {
