--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 body {
     width: 375px;
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: #f2f2f2;
 }
 header {
     margin-top: 59px;
