--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     background-color: rgba(122, 191, 191, .5);
 }
 body {
-    width: 375px;
+    width: 75%;
     margin: 0 auto;
     background-color: #f2f2f2;
 }
