--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 html {
     background-color: rgba(122, 191, 191, .5);
+    margin-left:10%;
+    margin-right: 10%;
 }
 body {
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
     background-color: #f2f2f2;
 }
