--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ body {
 header {
     margin-top: 59px;
     padding-bottom: 20px;
-    background: rgb(33,4,217);
+    background: #f2f2f2;
     background: linear-gradient(90deg, rgba(33,4,217,1) 0%, rgba(2,6,89,1) 33%, rgba(2,6,89,1) 66%, rgba(0,0,0,1) 100%);
 }
 nav {
     width: 375px;
-    background-color: #030A8C;
+    background-color: #ffffff;
     position: absolute;
     top: 0;
     z-index:1;
