--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 header {
     margin-top: 59px;
     padding-bottom: 20px;
-    background: #f2f2f2;
+    background: rgb(195, 88, 106);
 }
 nav {
     width: 375px;
@@ -127,4 +127,7 @@ input:checked ~ label span:after {
 }
 input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
     top: 0;
+}
+figure{
+    width:100%;
 }
