--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #f2f2f2;
 }
 header {
-    margin-top: 59px;
+    margin-top: 20%;
     padding-bottom: 20px;
     background: rgb(195, 88, 106);
     margin-left:0px;
