--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ body {
     background-color: #f2f2f2;
 }
 header {
-    margin-top: 20%;
+    margin-top: 0px;
     padding-bottom: 20px;
     background: rgb(195, 88, 106);
     margin-left:0px;
     margin-right:0px;
-    padding: 0px;
+    padding-top: 10%;
 }
 nav {
     width: 100%;
