--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@ body {
     background-color: #f2f2f2;
 }
 header {
-    margin-top: 0px;
+    margin-top: 0;
     padding-bottom: 20px;
     background: rgb(195, 88, 106);
     margin-left:0px;
     margin-right:0px;
-    padding-top: 10%;
+    padding-top: 12%;
+    padding-right: 0%;
+    padding-left: 0%;
 }
 nav {
     width: 100%;
