--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
     background: rgb(195, 88, 106);
     margin-left:0px;
     margin-right:0px;
-    padding-top: 15%;
+    padding-top: 10%;
     padding-right: 0%;
     padding-left: 0%;
 }
@@ -28,6 +28,7 @@ nav {
     z-index:1;
     text-transform: uppercase;
     margin-bottom: 0%;
+    padding-bottom: 5;
 }
 nav ul {
     text-align: center;
