--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ header {
     padding-left: 0%;
 }
 nav {
-    width: 100%;
+    width: 80%%;
     background-color: #ffffff;
     position: absolute;
     top: 0;
     z-index:1;
     text-transform: uppercase;
-    margin-bottom: 0%;
+    margin-bottom: 10%;
     padding-bottom: 5;
 }
 nav ul {
