--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ header {
     padding-left: 0%;
 }
 nav {
-    width: 80%%;
+    width: 80%;
     background-color: #ffffff;
     position: absolute;
     top: 0;
     z-index:1;
     text-transform: uppercase;
-    margin-bottom: 10%;
-    padding-bottom: 5;
+    margin-bottom: 8%;
+    padding-bottom: 2px;
 }
 nav ul {
     text-align: center;
