--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
     padding-right: 0%;
     padding-left: 0%;
 }
-nav {
+#main-nav {
     width: 80%;
     background-color: #ffffff;
     position: absolute;
@@ -30,14 +30,14 @@ nav {
     margin-bottom: 2%;
     padding-bottom: 2px;
 }
-nav ul {
+#main-nav ul {
     text-align: center;
 }
-nav h2 {
+#main-nav h2 {
     visibility: hidden;
     height: 1px;
 }
-ul {
+#main-nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -46,7 +46,7 @@ ul {
     max-height: 0;
     transition: max-height .2s ease-out;
 }
-li a {
+#main-nab li a {
     display: block;
     padding: 20px 20px;
     text-decoration: none;
