--- a/style.css
+++ b/style.css
@@ -27,8 +27,11 @@ header {
     top: 0;
     z-index:1;
     text-transform: uppercase;
-    margin-bottom: 0%;
     padding-bottom: 2px;
+    display:grid;
+    grid-area: 
+    "#home""#logo""#avatar"
+    "#search""#search""#search";
 }
 #main-nav ul {
     text-align: center;
