--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
 #media{
     align-content: center ;
 }
-.search{
+#main-nav .search{
     position: absolute;
     left: 40px;
     top:40px;
