--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
     text-transform: uppercase;
     padding-bottom: 2px;
     display:grid;
+    grid-template-columns: 20px 40px 20px;
     grid-area: 
     "#home""#logo""#avatar"
     "#search""#search""#search";
