--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
     text-transform: uppercase;
     padding-bottom: 2px;
     display:grid;
-    grid-template-columns: 20px 40px 20px;
+    grid-template-columns: 20% 40% 20%;
     grid-area: 
     "#home""#logo""#avatar"
     "#search""#search""#search";
