--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ header {
     text-transform: uppercase;
     padding-bottom: 2px;
     display:grid;
-    grid-template-columns: 20% 40% 20%;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-areas: 
-    "#home""#logo""#avatar"
-    "#search""#search""#search";
+    "home""logo""logo""avatar"
+    "search""search""search";
 }
 #main-nav ul {
     text-align: center;
