--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
     padding-bottom: 2px;
     display:grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 2fr;
     grid-template-areas: 
     "home""logo""logo""avatar"
     "search""search""search";
@@ -65,8 +66,10 @@ header {
     top: 0;
     left: 0px;
     padding: 16px 16px;
-    grid-area: home;
-
+}
+.item-home{
+    grid-column-start:1;
+    grid-column-end:2;
 }
 [href="#logo"] {
     text-transform: capitalize;
@@ -77,7 +80,10 @@ header {
     top: 0;
     left: 25%;
     padding: 16px 32px;
-    grid-area: logo;
+}
+.item-logo{
+    grid-column-start:2;
+    grid-column-end:4;
 }
 [href="#avatar"] {
     text-transform: capitalize;
@@ -88,7 +94,11 @@ header {
     top: 0;
     right: 0px;
     padding: 16px 16px;
-    grid-area: avatar;
+}
+.item-avatar{
+    grid-column-start:4;
+    grid-column-end:5;
+
 }
 a:hover {
     background-color: #590242;
