--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header {
     top: 0;
     left: 0px;
     padding: 16px 16px;
+    background-color: hotpink;
 }
 .item-home{
     grid-column-start:1;
@@ -83,6 +84,7 @@ header {
     top: 0;
     left: 25%;
     padding: 16px 32px;
+    background-color: lime;
 }
 .item-logo{
     grid-column-start:2;
@@ -93,7 +95,7 @@ header {
     font-variant: small-caps;
     font-weight: bold;
     font-size: 30px;
-    
+    background-color: aquamarine;
     top: 0;
     right: 0px;
     padding: 16px 16px;
