--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header {
     padding: 16px 32px;
     background-color: lime;
 }
-.item-logo{
+#main-nav .item-logo{
     grid-column-start:2;
     grid-column-end:4;
 }
@@ -99,6 +99,7 @@ header {
     top: 0;
     right: 0px;
     padding: 16px 16px;
+    position: relative;
 }
 #main-nav .item-avatar{
     grid-column-start:4;
