--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ label {
     z-index: 2;
 }
 label span {
-    background-color: transparent;
+    background-color: red;
     display: block;
     height: 2px;
     position: relative;
@@ -130,7 +130,7 @@ label span {
     width: 18px;
 }
 label span:before, label span:after {
-    background: transparent;
+    background: red;
     content: '';
     display: block;
     height: 100%;
@@ -151,7 +151,7 @@ input:checked ~ ul {
     max-height: 500px;
 }
 input:checked ~ label span {
-    background: transparent;
+    background: blue;
 }
 input:checked ~ label span:before {
     transform: rotate(-45deg);
