--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
 header h1{
  text-align: center;
 }
-#media{
-    transform: rotate(45deg);
+#media save{
+    transform: rotate(90deg);
+    display:none;
 }
