--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
 header h1{
  text-align: center;
 }
-#media save{
+#media li{
     transform: rotate(90deg);
     display:none;
 }
