--- a/style.css
+++ b/style.css
@@ -177,6 +177,6 @@ header h1{
 #media li{
     transform: rotate(90deg);
     display:none;
-    align-content: center;
+    text-align: center;
     padding:10px ;
 }
