--- a/style.css
+++ b/style.css
@@ -31,8 +31,29 @@ header {
 }
 .item-search{
     grid-column-start:2;
-    grid-column-end:5;
+    grid-column-end:4;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
+header h1{
+    grid-column-start:2;
+    grid-column-end:4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.save{
+    grid-column-start:1;
+    grid-column-end:2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+.share{
+    grid-column-start:2;
+    grid-column-end:3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
 #main-nav {
     width: 80%;
     background-color: #ffffff;
@@ -179,14 +200,9 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
 header h1{
  text-align: center;
 }
-header{
-    display:grid;
 
-}
 #media li{
     transform: rotate(90deg);
     display:none;
-}
-#media{
-    align-content: center;
+
 }
