--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ header h1{
     transform: rotate(-90deg);
     display:none;
 }
-@media (min-width: 768px)
+@media screen and (min-width: 768px)
  {
     footer .left{
         text-align: left;
