--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 header {
     margin-top: 0;
     padding-bottom: 20px;
-    background: rgb(195, 88, 106);
+    background: #f2f2f2;
     margin-left:0px;
     margin-right:0px;
     padding-top: 5%;
@@ -177,6 +177,9 @@ header h1{
 #media li{
     transform: rotate(-90deg);
     display:none;
+}
+#sides{
+    background-color: #7abfbf ;
 }
 @media screen and (min-width: 768px)
  {
