--- a/style.css
+++ b/style.css
@@ -180,6 +180,16 @@ header h1{
 }
 #sides{
     background-color: #7abfbf ;
+
+}
+#details{
+    text-align: center;
+}
+#ingredients{
+    text-align: center;
+}
+#directions{
+    text-align: center;
 }
 @media screen and (min-width: 768px)
  {
