--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     margin-left:10%;
     margin-right: 10%;
     padding-top: 10%;
+    font-family: "bebas-neue", "montserrat" ;
 }
 body {
     width: 100%;
