--- a/style.css
+++ b/style.css
@@ -189,6 +189,12 @@ body h2{
 #details h2{
     text-align: center;
 }
+footer li{
+    transform: rotate(-90deg);
+    display:none;
+
+
+}
 @media screen and (min-width: 768px)
  {
     footer .left{
