--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ footer .left{
     }
     footer div.rightCol {
         float: right;
-    
-        display:inline-block;
+        transform: rotate(90deg) ;
+        display:inline;
     }
 }
