--- a/style.css
+++ b/style.css
@@ -199,6 +199,11 @@ footer div{
 footer div.rightCol{
     text-align: center;
 }
+footer div.leftCol{
+    top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 @media (min-width: 768px)
  {
     footer div.leftCol {
