--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ footer div.leftCol{
   left: 50%;
   transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  position: absolute;
 }
 @media (min-width: 768px)
  {
