--- a/style.css
+++ b/style.css
@@ -220,4 +220,7 @@ footer div.leftCol{
         transform: rotate(0deg) ;
         display:inline;
     }
+    nav{
+        display:inline;
+    }
 }
