--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ header h1{
 #sides{
     background-color: #7abfbf ;
 }
-#sides p{
+#sides p, #sides h4, #side h5{
     display: inline-block;
     
 
