--- a/style.css
+++ b/style.css
@@ -225,8 +225,8 @@ footer div.leftCol{
     }
     #sides{
         display:grid;
+        grid-template-columns: repeat(2, 1fr);
     
-    grid-template-rows: repeat(2, 1fr);
     }
 }
 @media (min-width:1280)
