--- a/style.css
+++ b/style.css
@@ -240,9 +240,10 @@ footer div.leftCol{
     }
     .media{
         position: absolute;
-        top: 250px;
+        top: 350px;
         background-color: #f2f2f282;
-        width: 100%;
+        width: 80%;
+        align-content: center;
     }
 
 }
