--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ footer div.leftCol{
         top: 320px;
         background-color: #f2f2f282;
         width: 80%;
+        padding-left: 10%;
 
         
     }
