--- a/style.css
+++ b/style.css
@@ -243,11 +243,8 @@ footer div.leftCol{
         transform:scaleY(350px);
         background-color: #f2f2f282;
         width: 60%;
-        padding-left: 20%;
-
-        
+        padding-left: 20%;  
     }
-
 }
 @media (min-width:1280px)
 {
@@ -261,5 +258,8 @@ footer div.leftCol{
 }
 .details{
     display: inline-flex;
+}
+.media{
+    display:none;
 }
 }
