--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ footer div.leftCol{
     transform:rotate(-90deg);
     left:-400px;
     background-color: #ffffff;
-    top: 50px;
+    top: -50px;
+    border-color: #EB5428;
 }
 }
