--- a/style.css
+++ b/style.css
@@ -263,7 +263,8 @@ footer div.leftCol{
     transform:rotate(-90deg);
     left:-400px;
     background-color: #ffffff;
-    top: -50px;
+    top: -350px;
     border-color: #EB5428;
+    padding:50px ;
 }
 }
