--- a/style.css
+++ b/style.css
@@ -243,7 +243,8 @@ footer div.leftCol{
         transform:scaleY(350px);
         background-color: #f2f2f282;
         width: 60%;
-        padding-left: 20%;  
+        padding:25px
+        padding-left: 20%; 
     }
 }
 @media (min-width:1280px)
