--- a/style.css
+++ b/style.css
@@ -267,6 +267,6 @@ footer div.leftCol{
     top: 390px;
     border-color: #EB5428;
     padding:50px ;
-    padding-top: 0px;
+    padding-right: 0px;
 }
 }
